# bettor

./: ..env 2.icloud  .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPORTANT_NOTES.md  MULTI_SPORT_HF_PIPELINE.md  Procfile  QUICK_START.md  README.md  README_MODAL.md  SESSION_STATUS.md  SOCCER_SETUP.md  TODO.md  _jscheck.js  _tmp_check.js  _tmp_dashboard.js  _tmp_dashboard_rendered.js  _tmp_gameCard.js  _tmp_loadPerformance.js  app.py  package.json  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  requirements.txt  vercel.json  wrangler.toml
.github/: copilot-instructions.md
.history/: .env_20260421134722.example  .env_20260421143818.example  .env_20260421143854.example  .env_20260421144125  .gitignore_20260421131430  Procfile_20260421145647  README_20260421131515.md  _test_props_20260421204138.py  railway_20260421145648.json  requirements_20260421131427.txt  requirements_20260421134722.txt  requirements_20260421134842.txt  requirements_20260421145237.txt  requirements_20260421152638.txt  requirements_20260421170256.txt
api/: index.py
data/: kalshi_trade_api.py
docs/: golf_multi_source_data.md  kalshi_multi_sport_data_sources.md  soccer_multi_source_data.md  tennis_multi_source_data.md  wnba_data_sources.md
hf_space_api/: Dockerfile  README.md  app.py  requirements.txt
modal_app/: __init__.py  api_serve.py  common.py  daily_data_fetch.py  daily_predict.py  daily_train.py  polymarket_submit.py  requirements.txt
public/: index.html
scripts/: _apply_dashboard_html.py  _diag_full.py  (+51 more)
(+216 files in other folders)
