[project]
name = "bettor"
version = "0.1.0"
description = "Sports betting analysis dashboard"
requires-python = ">=3.11,<3.13"
dependencies = [
	"pandas",
	"numpy",
	"joblib",
	"requests",
	"beautifulsoup4",
	"python-dotenv",
	"flask",
	"gunicorn",
	"psycopg2-binary",
	"pytz",
	"APScheduler",
	"praw",
	"cryptography",
	"websockets>=12.0",
	"py-clob-client",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
